ingress-gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-backend-service
spec:
  hosts:
  - "*"
  gateways:
  - weather-backend-gateway
  http:
  - match:
    - uri:
      exact: /api/weather
    route:
    - destination:
      host: weather-backend
      subset: single
      port:
        number: 5000
      weight: 90
    - destination:
      host: weather-backend
      subset: multiple
      port:
        number: 5000
    weight: 10
